before berlin (real merge)

--- a/public/css/lib/fontello/css/fontello-codes.css
+++ b/public/css/lib/fontello/css/fontello-codes.css
@@ -117,3 +117,7 @@
 .icon-chat-bubble-duo-empty:before { content: '\e873'; } /* '' */
 .icon-members-empty:before { content: '\e874'; } /* '' */
 .icon-cross-fat-empty:before { content: '\e875'; } /* '' */
+.icon-bednight:before { content: '\e876'; } /* '' */
+.icon-hashtag:before { content: '\e877'; } /* '' */
+.icon-hashtag-empty:before { content: '\e878'; } /* '' */
+.icon-chat-bubble:before { content: '\e879'; } /* '' */
