--- a/public/css/src/hive/hive.css
+++ b/public/css/src/hive/hive.css
@@ -18,6 +18,10 @@
   background: #eee;
 }
 
+.hive.x--1 .hive__background {
+  width: 70%;
+  height: 70%;
+}
 
 .hive__picture {
   border-radius: 100px;
@@ -31,6 +35,12 @@
   border: 2px solid #eee;
   border: 3px solid white;
   cursor: pointer;
+}
+
+.hive.x--1 .hive__picture {
+  width: 60%;
+  height: 60%;
+  transform: translate(0);
 }
 
 .hive.x--2 .hive__picture {
