--- a/public/css/src/profile/profile_user.css
+++ b/public/css/src/profile/profile_user.css
@@ -82,7 +82,7 @@
 
 .user-infos__item.x--base.x--male {
     background: rgba(63, 179, 198, 0.7);
-    background: #1a59c3;
+    background: #7b4cbb;
 }
  
 .user-infos__item.x--base h2 {
