--- a/public/css/lib/fontello/css/fontello.css
+++ b/public/css/lib/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?64390715');
-  src: url('../font/fontello.eot?64390715#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?64390715') format('woff2'),
-       url('../font/fontello.woff?64390715') format('woff'),
-       url('../font/fontello.ttf?64390715') format('truetype'),
-       url('../font/fontello.svg?64390715#fontello') format('svg');
+  src: url('../font/fontello.eot?17637433');
+  src: url('../font/fontello.eot?17637433#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?17637433') format('woff2'),
+       url('../font/fontello.woff?17637433') format('woff'),
+       url('../font/fontello.ttf?17637433') format('truetype'),
+       url('../font/fontello.svg?17637433#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?64390715#fontello') format('svg');
+    src: url('../font/fontello.svg?17637433#fontello') format('svg');
   }
 }
 */
@@ -173,3 +173,7 @@
 .icon-chat-bubble-duo-empty:before { content: '\e873'; } /* '' */
 .icon-members-empty:before { content: '\e874'; } /* '' */
 .icon-cross-fat-empty:before { content: '\e875'; } /* '' */
+.icon-bednight:before { content: '\e876'; } /* '' */
+.icon-hashtag:before { content: '\e877'; } /* '' */
+.icon-hashtag-empty:before { content: '\e878'; } /* '' */
+.icon-chat-bubble:before { content: '\e879'; } /* '' */
