--- a/public/css/src/chat/chat_inview.css
+++ b/public/css/src/chat/chat_inview.css
@@ -72,7 +72,7 @@
     height: 42px;
 }
 
-.chat-inview-header .bubble {background: #1b69ec;border: none;width: 18px;height: 18px;border: 2px solid white;top: -2px;right: -4px;}
+.chat-inview-header .bubble {background: #1a59c3;border: none;width: 18px;height: 18px;border: 2px solid white;top: -2px;right: -4px;}
 
 .chat-inview__icon:hover {
     background: #f5f5f5;
@@ -213,7 +213,7 @@
     margin-right: -10px;
     position: relative;
     right: 6px;
-    background: #8d65c3;
+    background: rgb(26, 89, 195);
 }
 
 .chat-inview-message.x--friend .chat-inview-message__bubble {
