--- a/public/css/src/landing/landing.css
+++ b/public/css/src/landing/landing.css
@@ -221,7 +221,7 @@
     text-transform: uppercase;
     font-size: 8px;
     font-weight: 700;
-    color: #1b69ec;
+    color: #1a59c3;
     cursor: pointer;
     text-align: center;
     /* display: none; */
