--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -21,8 +21,7 @@
     border: 1px solid #ececec;
 }
 
-.map__icon.x--geoloc,
-.map__icon.x--change-location {
+.map__icon.x--geoloc, .map__icon.x--change-location, .map__icon.x--facebook {
     bottom: 31px;
     font-size: 22px;
     cursor: pointer;
@@ -37,6 +36,14 @@
 .map__icon.x--change-location:hover,
 .map__icon.map-zoom i:hover {
     color: #508aea;
+}
+
+.map__icon.x--facebook {
+
+}
+
+.map__icon.x--facebook:hover{
+    
 }
 
 .map__icon.x--change-location {
@@ -56,7 +63,7 @@
 }
 
 .map__icon.x--create-before {
-    background: #1B69EC;
+    background: #1a59c3;
     padding: 2px;
     color: white;
     right: 20px;
@@ -84,7 +91,7 @@
 .map__icon.x--create-before.js-create-before.x--round-icon {}
 
 .map__icon.x--filter-dates {
-    color: #1b69ec;
+    color: #1a59c3;
     right: 10px;
     display: flex;
     top: 110px;
@@ -92,7 +99,7 @@
 
 .map__icon.x--create-before:hover {opacity: .8!important;}
 
-.map__icon.x--geoloc {
+.map__icon.x--geoloc, .map__icon.x--facebook {
     left: 20px;
 }
 
@@ -104,14 +111,14 @@
 }
 
 .map__overlay {
-    background: rgba(0, 0, 0, .15);
+    background: rgba(232, 232, 232, 0.64);
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
-    display: none;
+    z-index: 10;
+    background: rgba(0, 0, 0, 0.17);
 }
 
 .map-browse {
@@ -202,7 +209,7 @@
     position: absolute;
     border-color: rgb(49, 49, 49);
     border-color: white;
-    border-color: #1b69ec;
+    border-color: #1a59c3;
     border-color: #1a59c3;
 }
 
@@ -238,6 +245,16 @@
     margin: 4px;
 }
 
+.mrk__img .img-wrap {
+    width: 100%;
+    height: 100%;
+}
+
+.mrk__img .img-item {
+    transition: all linear .5s;
+    position: absolute;
+}
+
 .mrk__status {
     bottom: -2px;
     right: -4px;
@@ -250,17 +267,36 @@
 }
 
 .mrk__status.x--accepted {
-    background: #1b69ec;
+    background: #1a59c3;
     background: #1a59c3;
     color: white;
     border: 2px solid white;
 }
 
 .mrk__status.x--pending {
-    color: #1b69ec;
+    color: #1a59c3;
     background: white;
-    border: 2px solid #1b69ec;
+    border: 2px solid #1a59c3;
     font-size: 9px;
+}
+
+.mrk__status.x--number {color: white;border: 2px solid white;font-family: 'quenda';}
+.mrk__status.x--number  span {
+    position: relative;
+    top: 1px;
+}
+.mrk__status.x--number.x--1 {
+    background: #1ecc21;
+}
+.mrk__status.x--number.x--2 {
+    background: #7b4cbb;
+}
+.mrk__status.x--number.x--3 {
+    background: pink;
+    color: #771224;
+}
+.mrk__status.x--number.x--4 {
+    background: #fd7124;
 }
 
 .mrk__status.x--host {
@@ -269,7 +305,7 @@
     color: white;
     color: #ffec4d;
     color: #ffa900;
-    border: 2px solid;
+    border: 1px solid;
     border-color: white;
     border-color: #ffec4d;
 }
@@ -298,3 +334,41 @@
     border: 0px solid #ffffff;
     display: none;
 }
+
+.meemap-closed {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 100;
+    background: white;
+    height: 70%;
+    position: fixed;
+    flex-flow: column;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.meemap-closed__h1 {font-family: 'quenda';font-size: 22px;margin-bottom: 20px;color: #7b4cbb;}
+.meemap-closed__h1 h1 {}
+.meemap-closed__h2 {
+    font-size: 12.5px;
+    margin-bottom: 80px;
+    width: 50%;
+    text-align: center;
+    line-height: 24px;
+    align-items: center;
+    color: #454545;
+}
+.meemap-closed__h2 h2 {}
+.meemap-closed__icon {
+    order: -1;
+    font-size: 54px;
+    margin-bottom: 30px;
+    width: 120px;
+    height: 120px;
+    background: #faf7ff;
+    color: #7b4cbb;
+}
+.meemap-closed__icon i {}
