--- a/public/css/src/menu/menu.css
+++ b/public/css/src/menu/menu.css
@@ -100,10 +100,10 @@
 
 .menu-item.x--active .menu-item__icon {
     /* border: 2px solid; */
-    color: #1b69ec;
     color: #1a59c3;
-    /* background: #1b69ec; */
-    /* border: 1px solid #1b69ec; */
+    color: #1a59c3;
+    /* background: #1a59c3; */
+    /* border: 1px solid #1a59c3; */
 }
 
 .menu-item__body i {
@@ -129,7 +129,7 @@
     bottom: -23px;
     border-radius: 20px;
     left: 0px;
-    background: #1b69ec;
+    background: #1a59c3;
     background: #1a59c3;
     position: absolute;
 }
@@ -158,7 +158,9 @@
     font-size: 14px;
     border: 1px solid;
     padding: 10px 45px;
-    color: #1b69ec;
+    color: #1a59c3;
+    border-radius: 100px;
+    color: #17b33a;
 }
 
 .update-pictures.x--active {
@@ -182,7 +184,7 @@
     height: 34px;
     font-size: 16px;
     border-radius: 20px;
-    border: 1px solid #1b69ec;
+    border: 1px solid #1a59c3;
     box-sizing: border-box;
 }
 
