--- a/public/css/src/search/search.css
+++ b/public/css/src/search/search.css
@@ -89,7 +89,7 @@
     display: block;
     width: 100%;
     height: 0;
-    padding-bottom: 33%;
+    padding-bottom: 31%;
     margin: 2px;
     overflow: hidden;
     position: relative;
@@ -266,7 +266,7 @@
 }
 
 .search-user__action.x--share {
-    color: #1B69EC;
+    color: #1a59c3;
 }
 
 .search-user__action i {
