--- a/public/css/src/settings/settings.css
+++ b/public/css/src/settings/settings.css
@@ -29,9 +29,11 @@
     font-size: 12px;
     font-weight: 500;
     text-align: center;
-    background: #f7f7f7;
+    background: #fcf6ff;
+    color: #7b4cbb;
     padding: 10px 0;
     border-radius: 10px;
+    font-family: 'quenda';
 }
 
 .settings-item {
@@ -103,7 +105,7 @@
 .settings-item.x--active {}
 
 .settings-item.x--active input {
-    border-bottom: 1px solid #1B69EC;
+    border-bottom: 1px solid #1a59c3;
     padding-left: 15px;
 }
 
@@ -152,12 +154,12 @@
     bottom: 0px;
     border-radius: 20px;
     left: 8px;
-    background: #1b69ec;
+    background: #1a59c3;
     position: absolute;
 }
 
 .menu-section-submenu__item.x--active {
-    color: #1B69EC;
+    color: #1a59c3;
 }
 
 .menu-section-submenu__item.x--active .menu-section-submenu__bar {
