--- a/public/css/src/before/before_create.css
+++ b/public/css/src/before/before_create.css
@@ -6,7 +6,7 @@
     z-index: 1000;
     background: rgb(255, 255, 255);
     width: 400px;
-    padding: 0 24px 40px 24px;
+    padding: 0 60px 40px;
     box-sizing: border-box;
     box-shadow: 0 0 14px #949494;
     flex-flow: column nowrap;
@@ -19,7 +19,7 @@
     top: 16px;
     right: 10px;
     cursor: pointer;
-    color: #1a59c3;
+    color: #ee145d;
     font-size: 14px;
 }
 
@@ -33,7 +33,7 @@
 .be-create-row__subtitle {
     font-weight: bold;
     margin-top: 26px;
-    font-size: 13px;
+    font-size: 14px;
     font-family: 'quenda';
     color: #454545;
 }
@@ -57,6 +57,7 @@
     justify-content: center;
     align-items: center;
     display: flex;
+    display: none;
 }
 
 .be-create__title h1 {
@@ -68,6 +69,7 @@
 
 .be-create-row__input {
     width: 100%;
+
 }
 
 .be-create-row__input input {
@@ -75,11 +77,25 @@
     padding: 10px 10px 10px 32px;
     box-sizing: border-box;
     border-radius: 4px;
-    border: 1px solid #ccc;
+    border: 1px solid #ececec;
+    box-shadow: 3px 2px 2px #e0e0e0;
     font-size: 13px;
-    color: #1a59c3;
+    color: #ef1a5d;
     cursor: pointer;
     font-weight: 400;
+}
+
+.be-create-row__input div {
+    width: 22px;
+    height: 22px;
+    font-size: 14px;
+    position: absolute;
+    right: 5px;
+    top: 8px;
+    color: #f13973;
+    background: #fbfbfb;
+    cursor: pointer;
+    border-radius: 4px;
 }
 
 .be-create-row.x--hosts {}
@@ -103,6 +119,7 @@
     font-size: 11px;
     margin-top: 8px;
     color: #919191;
+    display: none;
 }
 
 .be-create-row__explanations div {}
@@ -123,16 +140,15 @@
 }
 
 .be-create__button button {
-    width: 90%;
-    height: 48px;
+    width: 100%;
+    height: 50px;
     border-radius: 4px;
-    font-size: 16px;
+    font-size: 18px;
     color: white;
-    font-weight: 500;
-    background: #1a59c3;
     opacity: .3;
     border: none;
-    background: linear-gradient( 45deg, #1a59c3, #7b4cbb );
+    font-weight: bold;
+    font-family: 'quenda';
 }
 
 .be-create.x--pending .be-create__button button {
@@ -177,18 +193,18 @@
 
 .be-create__hashtags {
     display: flex;
-    padding: 6px 1px;
+    padding: 10px 0px;
     flex-flow: row wrap;
 }
 
 .be-create__hashtags.x--disabled {}
 
 .be-create__hashtag {
-    background: rgba(26, 89, 195, 0.07);
-    color: #1a59c3;
+    border: 1px solid;
+    color: #f63c5d;
     font-size: 12px;
     padding: 8px 12px;
-    border-radius: 2px;
+    border-radius: 50px;
     cursor: pointer;
     font-family: 'quenda';
     margin: 0 4px 4px 0;
@@ -204,13 +220,14 @@
 }
 .be-create__hashtag .value {}
 
-.be-create-row.x--hashtags input {
+.be-create-row.x--hashtags input,.be-create-row.x--location input {
     cursor: text;
 }
 
 .x--disabled .be-create__icon,
 .x--disabled input {
     opacity: .7;
+    box-shadow: none;
 }
 
 .x--disabled input {
@@ -220,6 +237,40 @@
     border: none;
 }
 
-.be-create__image {width: 50px;height: 50px;margin: 30px auto 10px;font-size: 30px;display: flex;justify-content: center;align-items: center;}
+.be-create__image {width: 110px;height: 110px;margin: auto auto 10px;font-size: 30px;display: flex;justify-content: center;align-items: center;}
 
 .be-create__image i {transform: rotate(15deg);}
+
+.medal {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    margin: auto;
+    position: relative;
+    border-radius: 1000px;
+}
+.medal.x--male {
+}
+.medal.x--female {}
+.medal-img {border-radius: 1000px;overflow: hidden;margin: 2px;width: 100%;height: 100%;}
+.medal-img img {
+    width: 100%;
+    height: 100%;
+}
+.medal-status {
+    position: absolute;
+    bottom: -6px;
+    right: 0px;
+    font-size: 12px;
+    width: 30%;
+    height: 30%;
+    z-index: 100;
+}
+.medal-status.x--hosting {
+    background: #ffec4d;
+    color: #ffa900;
+    border: 2px solid white;
+}
+.medal-status i {
+    font-size: 16px;
+}
