--- a/public/css/src/chat/chat.css
+++ b/public/css/src/chat/chat.css
@@ -422,6 +422,10 @@
     margin-bottom: 30px;
     justify-content: center;
 }
+.chat-inview .chat-empty__image {
+    width: 150px;
+    height: 150px;
+}
 .chat-empty__icon {
     color: #db4760;
 }
