--- a/public/css/src/friends/friends.css
+++ b/public/css/src/friends/friends.css
@@ -160,7 +160,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    z-index: 1000000;
+    z-index: 100;
     font-size: 12px;
     height: 90px;
     border: 1px solid #f7f7f7;
