--- a/public/css/src/menu/menu.css
+++ b/public/css/src/menu/menu.css
@@ -230,7 +230,7 @@
     height: 24px;
     font-size: 12px;
     margin: 0 8px;
-    background: #fbfbfb;
+    background: none;
 }
 
 .app-subheader.x--menu .menu-item__bar {
