--- a/public/css/src/rosace/rosace.css
+++ b/public/css/src/rosace/rosace.css
@@ -11,6 +11,8 @@
     position: absolute;
     overflow: hidden;
     box-sizing: border-box;
+    height: 100%;
+    width: 100%;
 }
 
 .rosace__part img {
